# hltv-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
api/: base_request.py  consts.py  models.py  parser.py
api/hltv/: search_request.py
api/match/: request.py
api/player/: request.py
api/team/: request.py
hltv/: __init__.py
hltv/api/: base_request.py
hltv/api/hltv/: search_request.py
hltv/api/match/: request.py
hltv/api/player/: request.py
hltv/api/team/: request.py
hltv/libs/: helper.py
hltv/models/hltv/: lib.py
hltv/models/match/: lib.py
hltv/models/player/: lib.py
hltv/models/team/: lib.py
libs/: helper.py  logger.py
match/: lib.py
models/hltv/: lib.py
models/match/: lib.py
models/player/: lib.py
models/team/: lib.py
package/: __init__.py
package/api/: base_request.py
package/api/hltv/: search_request.py
package/api/match/: request.py
package/api/player/: request.py
package/api/team/: request.py
package/models/hltv/: lib.py
package/models/match/: lib.py
package/models/player/: lib.py
package/models/team/: lib.py
tests/: main.py
