[tool.poetry]
name = "hltv-py"
version = "0.1.0"
description = "Python scraper for HLTV.org"
authors = ["kiobu <cdolson30@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Flask = "^1.1.2"
beautifulsoup4 = "^4.9.3"
Werkzeug = "^1.0.1"
pip = "^21.0.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
